# Lumina

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh
.claude/: claude.md  project-structure.md
.github/workflows/: docs.yml  jekyll-gh-pages.yml
cli/: package-lock.json  package.json
cli/src/: index.js
cli/src/commands/: build.js  dev.js  doctor.js  generate.js  init.js  run.js  show.js  update.js
cli/src/utils/: logger.js  paths.js  process.js
docs/: _config.yml  architecture.md  backend-development.md  deployment.md  frontend-development.md  getting-started.md  index.md  security.md
examples/habit-tracker/: lumina.json
examples/habit-tracker/backend/: build.gradle.kts  settings.gradle.kts
examples/habit-tracker/backend/src/main/java/app/: HabitTrackerApp.java
examples/habit-tracker/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/habit-tracker/frontend/src/: main.ts
examples/lumina-showcase/: lumina.json
examples/lumina-showcase/backend/: build.gradle.kts  settings.gradle.kts
examples/lumina-showcase/backend/src/main/java/app/: ShowcaseApp.java
examples/lumina-showcase/frontend/: index.html  package-lock.json  package.json
examples/lumina-showcase/frontend/src/: main.ts
scripts/: build.sh  embed_assets.py  package.sh
sdk-core/: CMakeLists.txt
sdk-core/src/: main.cpp
sdk-runtime/: build.gradle.kts  settings.gradle.kts
sdk-runtime/src/main/java/dev/lumina/bridge/: LuminaBridge.java
sdk-runtime/src/main/java/dev/lumina/runtime/: DevServer.java  LuminaFeature.java  LuminaRuntime.java
ui-template/: index.html  package-lock.json  package.json  vite.config.ts
ui-template/src/: main.js  main.ts
